# pipepy

./: .gitignore  CHANGELOG.md  Makefile  Makefile.py  README.md  check_tag.py  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  todos.md
.github/workflows/: ci.yml  publish.yml  test.yml
demo/: demo.py  interactive.py  interactive2.py  main.py
src/pipepy/: __init__.py  exceptions.py  misc.py  pipepy.py  pymake.py  utils.py
src/tests/: test_background.py  test_context_processor.py  test_exceptions.py  test_misc.py  test_modify.py  test_output.py  test_pipes.py  test_pymake.py  utils.py
src/tests/playground/: Makefile.py  bad_env  echo_messages.py  env  math_quiz_student.py  math_quiz_teacher.py
src/tests/playground/envdir/: env
